--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,40 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    background-color: rgba(187, 53, 53, 0.747);
+}
+
+.title {
+    font-size: 30px;
+    color: white;
+    text-align: center;
+}
+
+main {
+    
+}
+
+#calcola_prezzo {
+    display: flex;
+    justify-content: center;
+}
+
+.container_dati {
+    background-color: white;
+    width: 80%;
+    height: 300px;
+    border-radius: 10px;
+}
+
+#container_box {
+    display: flex;
+    justify-content: center;
+}
+ 
+.biglietto_box  {
+    background-color: white;
+    width: 80%;
+    height: 200px; 
+}
