--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,14 @@ main {
 .container_dati {
     background-color: white;
     width: 80%;
-    height: 300px;
+    height: 200px;
     border-radius: 10px;
+}
+
+.container_btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #container_box {
@@ -38,7 +44,7 @@ main {
 .biglietto_box  {
     background-color: white;
     width: 80%;
-    height: 200px; 
+    height: 100px; 
 }
 
 .gray {
@@ -54,4 +60,8 @@ main {
     border: 2px solid red;
     width: 200px;
     height: 40px;
+}
+
+#prezzo {
+    color: black;
 }
