--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ main {
 
 .gray {
     background-color: gray;
+    height: 20px;
 }
 
 .red {
@@ -65,4 +66,19 @@ main {
 
 #prezzo {
     color: black;
+}
+
+.dettaglio {
+    display: flex;
+    justify-content: start;
+}
+
+.table {
+    width: 100%;
+    height: 100%;
+}
+
+.text {
+    display: flex;
+    justify-content: space-around;
 }
