--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: rgba(187, 53, 53, 0.747);
+    background-color: #800020;
 }
 
 .title {
@@ -26,7 +26,7 @@ main {
 .container_dati {
     background-color: white;
     width: 80%;
-    height: 200px;
+    height: 180px;
     border-radius: 10px;
     text-align: center;
 }
@@ -44,7 +44,7 @@ main {
 }
 
 .little_box_km {
-    background-color: red;
+    background-color: #800020;
     color: white;
 }
 
@@ -72,12 +72,12 @@ main {
 }
 
 .red {
-    color: red;
+    color: #800020;
 }
 
 .little_box {
     border-radius: 10px;
-    border: 2px solid red;
+    border: 2px solid #800020;
     width: 200px;
     height: 40px;
 }
