--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,15 @@ body {
     height: 20px;
 }
 
-.red {
+.btn_red {
     color: #800020;
+    display: inline-block;
+    margin: 0 10px;
+    padding: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    border: 1px solid grey;
+    border-radius: 5px;
 }
 
 .little_box {
